[gd_scene load_steps=7 format=2]

[ext_resource path="res://Bars.tres" type="StyleBox" id=1]
[ext_resource path="res://Bars2.tres" type="StyleBox" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/EpilepsySansBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0.858824, 0.882353, 0.713726, 1 )
font_data = ExtResource( 5 )

[node name="HUD" type="CanvasLayer" groups=[
"hud",
]]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05945
margin_top = -35.0
margin_right = 1.05945
custom_styles/fg = ExtResource( 1 )
custom_styles/bg = ExtResource( 2 )
max_value = 1000.0
step = 0.1
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Control"]
margin_right = 119.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "00:00AM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" type="RichTextLabel" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -146.0
margin_bottom = -45.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerHour" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerFade" type="Timer" parent="."]
one_shot = true

[node name="TweenFade" type="Tween" parent="."]

[node name="TweenInteractable" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="LabelInteractable" type="Label" parent="."]
margin_right = 126.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 64.3576, 25.3601 )
custom_fonts/font = ExtResource( 4 )
text = "Pick Up"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="ColorRectFade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
color = Color( 0.176471, 0.203922, 0.356863, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerDead" type="Timer" parent="."]
one_shot = true

[node name="TimerScore" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="TimerHour" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]
